--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>Vite + React + TS</title>
+    <title>Pdf Parser</title>
   </head>
   <body>
     <div id="root"></div>
